syntax="proto3";
package auth_game_proto;

message a2g_verify_user {
   //玩家guid
   string playerGuid = 1;
}

message g2c_verify_user{
    //登陆状态
   bool loginState = 1;
}

service VerifyUserService {
  rpc VerifyUser(a2g_verify_user) returns (g2c_verify_user){}
}